# clapack

./: CLAPACKConfig.cmake  CMakeLists.txt
BLAS/: CMakeLists.txt
BLAS/SRC/: CMakeLists.txt
BLAS/TESTING/: CMakeLists.txt
F2CLIBS/libf2c/: CMakeLists.txt
INCLUDE/: blaswrap.h  clapack.h  f2c.h
SRC/: CMakeLists.txt
TESTING/: CMakeLists.txt
